# fisica

./: .gitignore  LICENSE  README.md  pyproject.toml
fisica/: .elettrostatica.py.swp  geometria.py
tests/: test_geometria.py
